# RM-Rune

./: .clang-format  .gitignore  colcon_build.sh  foxglove_bridge.sh  readme.md
src/rune/: CMakeLists.txt  package.xml
src/rune/config/: reco_config.yaml  reco_home_test.yaml  tracker_node.yaml
src/rune/include/prediction/: bullet_solve.hpp  prediction_node.hpp  predictor-GD.hpp  predictor-ceres.hpp  predictor.hpp
src/rune/include/recognition/: recognition_node.hpp  solvepose.hpp
src/rune/include/test/: test_node.hpp
src/rune/include/tracker/: cv_model.hpp  tracker_node.hpp
src/rune/include/transform/: transform_node.hpp
src/rune/launch/: rune_pkg.launch.py
src/rune/src/prediction/: prediction_node.cpp
src/rune/src/recognition/: detector.cpp  parameter_controler.cpp  recognition_node.cpp  solvepose.cpp
src/rune/src/test/: test_node.cpp
src/rune/src/tracker/: tracker_node.cpp
src/rune/src/transform/: transform_node.cpp
src/rune_sys_interfaces/: CMakeLists.txt  package.xml
src/rune_sys_interfaces/msg/: Fanblade.msg  Target.msg  TargetState.msg  TrackedRune.msg
